# nrn

./: .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  Taskfile.yml
.cargo/: audit.toml
.github/: dependabot.yml  pull_request_template.md
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
cli/: Cargo.toml
cli/src/: actions.rs  cli.rs  commands.rs  console.rs  display.rs  encoder.rs  main.rs  path.rs  progression.rs  reporter.rs
cli/src/actions/: chart.rs  display.rs  mod.rs
cli/src/actions/plot/: chart.rs  gif.rs  mod.rs
cli/src/charts/: dataset.rs  mod.rs  training.rs
cli/src/commands/: encode.rs  mod.rs  plot.rs  predict.rs  scale.rs  synth.rs  train.rs
cli/src/commands/plot/: activations.rs  dataset.rs  mod.rs  run.rs
cli/src/commands/train/: args.rs  callbacks.rs  mod.rs  model_saver.rs  monitor.rs  progression.rs  recap.rs  reporter.rs  resume.rs  start.rs
cli/src/display/: artifacts.rs  checkpoint.rs  classes.rs  classification.rs  dataset.rs  evaluation.rs  hyperparameters.rs  icons.rs  inference.rs  instance.rs  mod.rs  model.rs  objective.rs  path.rs  predictor.rs  progress.rs  scaler.rs  task.rs  terminal.rs  theme.rs
cli/src/plot/: chart.rs  gif.rs
cli/tests/: encode.rs  plot_activations.rs  predict.rs  train_lifecycle.rs  train_plot.rs
cli/tests/common/: cli.rs  mod.rs  predictor.rs  training.rs
core/: Cargo.toml
core/benches/: training.rs
core/src/: data.rs  lib.rs  model.rs  testing.rs  training.rs
core/src/accuracies/: binary_accuracy.rs
core/src/activations/: relu.rs
core/src/analysis/: boundary.rs  mod.rs
core/src/charts/: checkpoints.rs  dataset.rs  evaluation_history.rs  mod.rs  training.rs  training_history.rs
core/src/data/: classes.rs  dataset.rs  instance.rs  mod.rs  origin.rs  targets.rs
core/src/data/preprocessors/: mod.rs
core/src/data/preprocessors/scalers/: min_max.rs  mod.rs  z_score.rs
core/src/data/preprocessors/vectorizers/: image.rs  mod.rs
core/src/data/synth/: mod.rs  ring.rs  spiral.rs  uniform.rs
core/src/io/: bytes.rs  checkpoint.rs  checkpoints.rs  classes.rs  data.rs  gif.rs  h5.rs  hyperparams.rs  instance.rs  json.rs  mod.rs  model.rs  network.rs  optimizer.rs  path.rs  png.rs  predictor.rs  recorder.rs  run.rs  scalers.rs  snapshot.rs  task.rs  tensors.rs  training.rs  training_history.rs
core/src/io/data/: classes.rs  dataset.rs  instance.rs  mod.rs
core/src/io/model/: checkpoint.rs  config.rs  hyperparams.rs  mod.rs  network.rs  optimizer.rs  predictor.rs  run.rs  scalers.rs  scheduler.rs  task.rs  tensors.rs
core/src/io/raster/: mod.rs
core/src/loss_functions/: cross_entropy_loss.rs
core/src/nn/: affine.rs  callbacks.rs  checkpoints.rs  classification.rs  evaluation.rs  evaluation_history.rs  evaluator.rs  gradients.rs  learning_rate.rs  mod.rs  model.rs  objectives.rs  task.rs  tensors.rs  training.rs  training_history.rs  training_loop.rs  weight_decay.rs
core/src/nn/accuracies/: binary_accuracy.rs  categorical_accuracy.rs  mod.rs  multi_class_accuracy.rs  sparse_categorical_accuracy.rs
core/src/nn/activations/: identity.rs  mod.rs  relu.rs  sigmoid.rs  softmax.rs
core/src/nn/callbacks/: mod.rs
core/src/nn/initializations/: he.rs  mod.rs  xavier.rs
core/src/nn/layers/: conv2d.rs  dense.rs  flatten.rs  mod.rs
core/src/nn/loss_functions/: binary_cross_entropy.rs  categorical_cross_entropy.rs  cross_entropy_loss.rs  mean_squared_error.rs  mod.rs  sparse_categorical_cross_entropy.rs
core/src/nn/model/: config.rs  mod.rs  network.rs  predictor.rs  specs.rs
core/src/nn/model/config/: labels.rs  layer.rs  mod.rs  network.rs
core/src/nn/optimizers/: adam.rs  mod.rs  sgd.rs
core/src/nn/recorders/: checkpoints.rs  mod.rs  noop.rs
core/src/nn/schedulers/: constant.rs  cosine_annealing.rs  mod.rs  step.rs
core/src/nn/training/: backprop.rs  callbacks.rs  config.rs  early_stopping.rs  evaluator.rs  hyperparams.rs  mod.rs  outcome.rs  preprocessing.rs  run.rs  trainer.rs
core/src/plot/: activations.rs  build.rs  console.rs  image.rs  mod.rs  scene.rs
core/src/plot/console/: diagram.rs  figure.rs  mod.rs
core/src/plot/image/: diagram.rs  figure.rs  mod.rs
core/src/scalers/: min_max.rs  z_score.rs
core/src/storage/: data.rs  h5.rs  json.rs  model.rs  scalers.rs  training.rs
core/src/synth/: mod.rs  ring.rs  uniform.rs
core/tests/: convergence.rs  io_roundtrip.rs
docs/: benchmarks.md
examples/: scaled-ring-c2-f2-n400-seed1024.h5  scaled-uniform-c2-f2-n200-seed1024.h5  scaler-ring-c2-f2-n400-seed1024.json  training-model-scaled-uniform-c2-f2-n200-seed1024.h5
src/: cli.rs  commands.rs  main.rs  progression.rs
src/core/: activation.rs  data.rs  encoder.rs  initialization.rs  mod.rs  model.rs  neuron_network.rs  scaling.rs  training.rs  training_history.rs
src/core/accuracies/: binary_accuracy.rs  mod.rs  multi_class_accuracy.rs
src/core/activations/: mod.rs  relu.rs  sigmoid.rs  softmax.rs
src/core/initialization/: he.rs  mod.rs  xavier.rs
src/core/initializations/: he.rs  xavier.rs
src/core/loss_functions/: cross_entropy_loss.rs  mod.rs
src/core/optimizers/: mod.rs  sgd.rs
src/core/scalers/: min_max.rs  mod.rs  z_score.rs
src/hdf5/: mod.rs
src/plot/: mod.rs
src/storage/: data.rs  h5.rs  json.rs  mod.rs  model.rs  path.rs  scalers.rs  training.rs
src/storage/hdf5/: mod.rs
src/synth/: generators.rs  mod.rs
storage/: Cargo.toml
storage/src/: data.rs  h5.rs  json.rs  lib.rs  model.rs  scalers.rs  training.rs
synth/: Cargo.toml
synth/src/: lib.rs
synth/src/generators/: mod.rs  ring.rs  uniform.rs
tutorials/: model-scaled-ring-c2-f2-n400-seed1024.h5  model-scaled-uniform-c2-f2-n200-seed1024.h5  ring-c2-f2-n400-seed1024.h5  scaler-uniform-c2-f2-n200-seed1024.json  uniform-c2-f2-n200-seed1024.h5
