[package]
name = "nrn"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
colored = "3.0.0"
gif = "0.13.1"
hdf5-metno = "0.10.1"
indicatif = "0.17.11"
ndarray = "0.16.1"
ndarray-rand = "0.15.0"
plotters = "0.3.7"
png = "0.17.16"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
image = "0.24.9"
once_cell = "1.21.3"
