[package]
name = "nrn-cli"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "nrn"
path = "src/main.rs"

[dependencies]
nrn = { path = "../core", features = ["io", "charts"] }
clap = { version = "4.5.60", features = ["derive"] }
indicatif = "0.18.4"
console = "0.16.3"
ndarray = { version = "0.17.2" }
ndarray-rand = "0.16.0"
pathdiff = "0.2.3"