[package]
name = "nrn-cli"
version = "0.2.0"
edition = "2024"
rust-version.workspace = true

[[bin]]
name = "nrn"
path = "src/main.rs"

[dependencies]
nrn = { path = "../core", features = ["io", "raster", "console"] }
clap = { version = "4.6.1", features = ["derive"] }
indicatif = "0.18.4"
console = "0.16.3"
ndarray = { version = "0.17.2" }
ndarray-rand = "0.16.0"
pathdiff = "0.2.3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
image = { version = "0.25.10", default-features = false, features = ["png"] }