[package]
name = "nrn"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[features]
io = ["safetensors", "serde_json", "serde", "ndarray/serde", "image", "png", "gif"]
raster = ["plotters"]
console = ["textplots", "rgb"]

[dependencies]
ndarray = { version = "0.17.2" }
ndarray-rand = "0.16.0"
once_cell = "1.21.4"
inventory = "0.3"

safetensors = { version = "0.8.0", optional = true }
serde_json = { version = "1.0.150", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
# Only the input formats `encode` needs to decode. Dropping the default feature
# set (notably `avif`) keeps rav1e — and the unmaintained `paste` — out of the
# tree.
image = { version = "0.25.10", optional = true, default-features = false, features = [
    "png",
    "jpeg",
    "gif",
    "bmp",
] }
png = { version = "0.18.1", optional = true }
gif = { version = "0.14.2", optional = true }
plotters = { version = "0.3.7", optional = true }
textplots = { version = "0.8.7", default-features = false, optional = true }
rgb = { version = "0.8.53", optional = true }
