[package]
name = "nrn"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[features]
io = ["safetensors", "serde_json", "serde", "ndarray/serde", "image", "png", "gif", "arrow", "parquet"]
raster = ["plotters"]
console = ["textplots", "rgb"]
# Route ndarray's matmul through a system BLAS (backend selected per OS below).
blas = ["ndarray/blas", "dep:blas-src"]

[dependencies]
ndarray = { version = "0.17.2" }
ndarray-rand = "0.16.0"
once_cell = "1.21.4"
inventory = "0.3"
dyn-clone = "1.0.20"

safetensors = { version = "0.8.0", optional = true }
serde_json = { version = "1.0.150", optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
image = { version = "0.25.10", optional = true, default-features = false, features = [
    "png",
    "jpeg",
    "gif",
    "bmp",
] }
png = { version = "0.18.1", optional = true }
gif = { version = "0.14.2", optional = true }
arrow = { version = "59.1.0", optional = true, default-features = false }
parquet = { version = "59.1.0", optional = true, default-features = false, features = [
    "arrow",
] }
plotters = { version = "0.3.7", optional = true }
textplots = { version = "0.8.7", default-features = false, optional = true }
rgb = { version = "0.8.53", optional = true }

# BLAS backend, one per OS.
[target.'cfg(target_os = "macos")'.dependencies]
blas-src = { version = "0.14.0", optional = true, default-features = false, features = [
    "accelerate",
] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
blas-src = { version = "0.14.0", optional = true, default-features = false, features = [
    "openblas",
] }

[dev-dependencies]
criterion = { version = "0.8", default-features = false }

[[bench]]
name = "training"
harness = false
